--- a/src/Java/Web/src/main/resources/templates/home/index.html
+++ b/src/Java/Web/src/main/resources/templates/home/index.html
@@ -11,7 +11,7 @@
 
             <br />
             <img src="images/blue_small.gif" />
-            <p>Version 3</p>
+            <p>Version 4!</p>
         </div>
     </div>
 </body>
